RESOLVED FIXED110986
[BlackBerry] Fix WTF::String to BlackBerry::Platform::String conversion when the string is Latin-1-encoded
https://bugs.webkit.org/show_bug.cgi?id=110986
Summary [BlackBerry] Fix WTF::String to BlackBerry::Platform::String conversion when ...
Eli Fidler
Reported 2013-02-27 08:51:56 PST
We're currently assuming all WTF strings are valid UTF-8, which isn't true for Latin-1 strings.
Attachments
Patch (1.67 KB, patch)
2013-02-27 08:55 PST, Eli Fidler
no flags
Eli Fidler
Comment 1 2013-02-27 08:54:23 PST
typo.. the opposite. We're assuming platform strings are UTF-8.
Eli Fidler
Comment 2 2013-02-27 08:55:11 PST
WebKit Review Bot
Comment 3 2013-02-27 09:50:01 PST
Comment on attachment 190536 [details] Patch Clearing flags on attachment: 190536 Committed r144205: <http://trac.webkit.org/changeset/144205>
WebKit Review Bot
Comment 4 2013-02-27 09:50:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.