[BlackBerry] Fix BlackBerry::Platform::String to WTF::String conversion when the string is Latin-1-encoded. https://bugs.webkit.org/show_bug.cgi?id=110986

Reviewed by Yong Li.

Internally reviewed by Nima Ghanavatian.
BlackBerry PR 292922

We were assuming all platform strings were valid UTF-8, which isn't true for Latin-1 strings.

* platform/text/blackberry/StringBlackBerry.cpp:
(WTF::String::String):


git-svn-id: svn://svn.chromium.org/blink/trunk@144205 bbb929c8-8fbe-4397-9dbb-9b2b20218538